examples/test/testpolicy10786.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10786
  namespace: namespace102
spec:
  podSelector:
    matchLabels:
      key39: value5
      key20: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value19
          key26: value10
      podSelector:
        matchLabels:
          key0: value37
          key19: value19
          key21: value34
